tests/fixtures/errors/e0502_undriven_output.mimz
// expect: E0502
module M {
  in a: bit
  out y: bit
  out z: bit
  y = a
}
